--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
             </div>
         </label>
 
+        <label>
+            Avatar: <input type="file" id="avatar" required>
+        </label>
+
         <button id="button">Add Hero</button>
     </form>
 
