--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
 
     <!-- <div class="container">
     </div> -->
-
+    <div id="cont">
+        <input type="text" id="input"> First Name
+        <div id="coment"></div>
+    </div>
 
     <form class="heroes__form" id="heroesForm">
         <label>
-            Name Surname: <input type="text" id="name" value="Iron Man" placeholder="Iron Man">
+            Name Surname: <input type="text" id="name" value="" placeholder="Iron Man">
         </label>
         <label>
             Comics: <select id="comics" data-name="heroComics">
